<resources>
    <string name="app_name">Calculadora</string>
    <string name="_7">7</string>
    <string name="name">Name</string>
    <string name="mas">+</string>
    <string name="igual">=</string>
    <string name="_0">0</string>
    <string name="punto">.</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="menos">-</string>
    <string name="multiplicacion">*</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="division">/</string>
    <string name="ac">AC</string>
    <string name="del">DEL</string>
    <string name="raiz">V</string>
    <string name="potencia">^</string>
</resources>