<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@android:color/background_dark"
    android:foregroundGravity="fill_horizontal|center"
    android:gravity="right"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:stretchColumns="0,1,2,3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/display_background">

            <EditText
                android:id="@+id/txtResultado"
                android:layout_width="318dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center|right"
                android:inputType="textPersonName"
                android:text="@string/name"
                android:textSize="45sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnPotencia"
                style="@style/CalculatorButton"
                android:layout_weight="1"
                android:text="@string/potencia" />

            <Button
                android:id="@+id/btnRaiz"
                style="@style/CalculatorButton"
                android:text="@string/raiz" />

            <Button
                android:id="@+id/btnBorrar"
                style="@style/CalculatorButton"
                android:text="@string/del" />

            <Button
                android:id="@+id/btnLimpiar"
                style="@style/CalculatorButton"
                android:text="@string/ac" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn7"
                style="@style/CalculatorButton"
                android:layout_weight="1"
                android:text="@string/_7" />

            <Button
                android:id="@+id/btn8"
                style="@style/CalculatorButton"
                android:text="@string/_8" />

            <Button
                android:id="@+id/btn9"
                style="@style/CalculatorButton"
                android:text="@string/_9" />

            <Button
                android:id="@+id/btnDiv"
                style="@style/CalculatorButton"
                android:text="@string/division" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn4"
                style="@style/CalculatorButton"
                android:layout_weight="1"
                android:text="@string/_4" />

            <Button
                android:id="@+id/btn5"
                style="@style/CalculatorButton"
                android:text="@string/_5" />

            <Button
                android:id="@+id/btn6"
                style="@style/CalculatorButton"
                android:text="@string/_6" />

            <Button
                android:id="@+id/btnMulti"
                style="@style/CalculatorButton"
                android:text="@string/multiplicacion" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn1"
                style="@style/CalculatorButton"
                android:layout_weight="1"
                android:text="@string/_1" />

            <Button
                android:id="@+id/btn2"
                style="@style/CalculatorButton"
                android:text="@string/_2" />

            <Button
                android:id="@+id/btn3"
                style="@style/CalculatorButton"
                android:text="@string/_3" />

            <Button
                android:id="@+id/btnMenos"
                style="@style/CalculatorButton"
                android:text="@string/menos" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnPunto"
                style="@style/CalculatorButton"
                android:layout_weight="1"
                android:text="@string/punto" />

            <Button
                android:id="@+id/btn0"
                style="@style/CalculatorButton"
                android:text="@string/_0" />

            <Button
                android:id="@+id/btnIgual"
                style="@style/CalculatorButton"
                android:text="@string/igual" />

            <Button
                android:id="@+id/btnMas"
                style="@style/CalculatorButton"
                android:text="@string/mas" />

        </TableRow>
    </TableLayout>
</RelativeLayout>